--- a/templates/html/admin_dashboard.html
+++ b/templates/html/admin_dashboard.html
@@ -61,7 +61,7 @@
                     <td>{{ tx.user_name }}</td>
                     <td>
                       <span class="badge bg-secondary">{{ tx.tx_type }}</span>
-                      <small class="text-muted ms-1">{{ tx.related_id }}</small>
+                      <small class="text-muted ms-1">{{ tx.description }}</small>
                     </td>
                     <td class="text-end">
                       {% if tx.amount > 0 %}
