--- a/templates/liff/index.html
+++ b/templates/liff/index.html
@@ -574,9 +574,10 @@
           '（未入力）' }}</div>
       </div>
       <div class="flex gap-4 mt-6">
-        <button @click="confirmFinishStudy"
-          class="flex-1 py-3 bg-indigo-600 text-white font-bold rounded-xl">記録して終了</button>
-        <button @click="closeMemoConfirm" class="flex-1 py-3 bg-gray-200 text-gray-600 font-bold rounded-xl">戻る</button>
+        <button @click="onConfirmFinish" style="position: relative; z-index: 10001;"
+          class="flex-1 py-3 bg-indigo-600 text-white font-bold rounded-xl active:scale-95 transition-transform">記録して終了</button>
+        <button @click="closeMemoConfirm" style="position: relative; z-index: 10001;"
+          class="flex-1 py-3 bg-gray-200 text-gray-600 font-bold rounded-xl active:scale-95 transition-transform">戻る</button>
       </div>
     </div>
   </div>
@@ -635,7 +636,7 @@
   </div>
   </div>
 
-  <script type="module" src="/static/js/app.js?v=2"></script>
+  <script type="module" src="/static/js/app.js?v=3"></script>
 </body>
 
 </html>
